--- a/index.html
+++ b/index.html
@@ -13,15 +13,23 @@
             
             <div class="row">
                 <input type="text" id="input-box" placeholder="Add your text">
-                <button>Add</button>
+                <button onclick="addTask()">Add</button>
             </div>
             <ul id="list-container">
-                <li>Task 1</li>
+                <!-- <li class="checked">Task 1</li>
+                <li>Task 2</li>
+                <li>Task 3</li> -->
             </ul>
         </div>
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
+
+
+
+
 
 /*
 
@@ -29,5 +37,6 @@
 ukuran icon 78 sama 100 px
 .todo-app h2, biar sejajar dengan icon
 11.27
-
+pseudo elements ::before
+:hover
 */
