--- a/Quiz-App/index.html
+++ b/Quiz-App/index.html
@@ -6,8 +6,19 @@
     <title>Quiz-App</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    
+<body>   
+    <div class="app">
+        <h1>Simple Quiz</h1>
+        <div class="quiz">
+            <h2 id="question">Question goes here</h2>
+            <div id="answer-buttons">
+                <button class="btn">Answer 1</button>
+                <button class="btn">Answer 2</button>
+                <button class="btn">Answer 3</button>
+                <button class="btn">Answer 4</button>
+            </div>
+        </div>
+    </div>
 
     <script src="script.js"></script>
 </body>
